[tool.poetry]
name = "my-tiny-youtube-whisperer"
version = "0.1.0"
description = "YouTube downloader webapp built with FastAPI + yt-dlp"
authors = ["PDrzymkowski"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.135"
uvicorn = "^0.42"
yt-dlp = "*"
sse-starlette = "^3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-asyncio = "^0.25"
httpx = "^0.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
